@@ -1,3 +1,6 @@
 all:
-	zip -r `basename $(CURDIR)`-`cat ../VERSION`.zip document.php document.xml index.html tmpl language ChangeLog LICENSE.txt CREDITS.txt -i "*.php" -i "*.html" -i "*.sql" -i "*.xml" -i "*.ini" -i "*.js" -i "*.css" -i "*.png"
+	zip -ru `basename $(CURDIR)`-`cat ../VERSION`.zip * -x \*~ -x \*.svn\*
+
+clean:
+	rm `basename $(CURDIR)`-`cat ../VERSION`.zip
 
