@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+2010-12-08 Christophe Demko
+ + Adding category and categories models
+
 2010-12-07 Christophe Demko
  + Adding helpers.php files in the xml
  + Adding language files to the public part
